dialog kapatma butonu aktifleştirildi

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <p>Ready to take it to the next level? Contact us today and find out how our expertise can help your business grow.</p>
                 </div>
                 <div class="footer-content-mini2">
-                    <a class="openDialog" href="#">Get in touch</a>
+                    <a class="open-dialog" href="#">Get in touch</a>
                 </div>
             </div>
 
@@ -130,9 +130,9 @@
     </div>
 
 
-    <dialog class="dialogForm">
+    <dialog class="dialog-form">
         <form action="">
-
+            <button class="close-dialog">✖️</button>
             <table>
                 <tr>
                     <td>
@@ -223,8 +223,8 @@
     
                     </td>
                     <td>
-                        <input style="width: 90px;" type="submit">
-                        <input style="width: 90px;" type="reset">
+                        <input  style="width: 90px; cursor: pointer;" type="submit">
+                        <input style="width: 90px; cursor: pointer;" type="reset">
                     </td>
                 </tr>
     
