dialog kapatma butonu düzenlendi

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
     <dialog class="dialog-form">
         <form action="">
-            <button class="close-dialog">✖️</button>
+            <button class="close-dialog">X</button>
             <table>
                 <tr>
                     <td>
